--- a/cadastros/templates/escolher_horarios_table.html
+++ b/cadastros/templates/escolher_horarios_table.html
@@ -1,4 +1,4 @@
-{% load static %}
+ manage{% load static %}
 
 <!-- grid que lista atividades cadastrados -->
 <table class="table table-striped table-bordered table-hover">
