--- a/autenticacao/templates/recuperar_senha_email.html
+++ b/autenticacao/templates/recuperar_senha_email.html
@@ -31,7 +31,7 @@
         .button {
             display: inline-block;
             padding: 10px 20px;
-            background-color: #007bff;
+            background-color: #7a0149;
             color: #ffffff !important;
             text-decoration: none;
             border-radius: 5px;
